devel/ultimatepp/files/logs
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm: In function 'Upp::GlyphInfo Upp::GetGlyphInfoSys(CTFontRef, int, bool, CGRect*)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm:129:60: error: 'kCTFontOrientationHorizontal' was not declared in this scope; did you mean 'kCTFontOrientationAttribute'?
  129 |                         CTFontGetAdvancesForGlyphs(ctfont, kCTFontOrientationHorizontal, &glyph_index, &advance, 1);
      |                                                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                            kCTFontOrientationAttribute
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm: In function 'Upp::Vector<Upp::FaceInfo> Upp::GetAllFacesSys()':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/FontCoco.mm:266:22: error: narrowing conversion of 'kCTFontScriptsClass' from 'int' to 'unsigned int' [-Wnarrowing]
  266 |                 case kCTFontScriptsClass:
      |                      ^~~~~~~~~~~~~~~~~~~
